--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
             <input type="text" id="todo-input" placeholder="Add a new task..." required>
             <button type="submit">Add Task</button>
         </form>
+        <div class="controls">
+            <button id="clear-all-btn">Clear All</button>
+        </div>
         <ul id="todo-list"></ul>
     </div>
     <footer>
