--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>DocuMatic To-Do</h1>
         <form id="todo-form">
-            <input type="text" id="todo-input" placeholder="Add a new task..." required>
+            <input type="text" id="todo-input" placeholder="What needs to be done?" required>
             <button type="submit">Add Task</button>
         </form>
         <div class="controls">
