--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocuMatic - To-Do App</title>
+    <title>My Awesome To-Do App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>DocuMatic To-Do</h1>
+        <h1>My Awesome To-Do App</h1>
         <form id="todo-form">
             <input type="text" id="todo-input" placeholder="What needs to be done?" required>
             <button type="submit">Add Task</button>
