fix: clarify clear all button text

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <button type="submit">Add Task</button>
         </form>
         <div class="controls">
-            <button id="clear-all-btn">Clear All</button>
+            <button id="clear-all-btn">Clear All Tasks</button>
         </div>
         <ul id="todo-list"></ul>
     </div>
