--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <h1>My Awesome To-Do App</h1>
         <form id="todo-form">
             <input type="text" id="todo-input" placeholder="What needs to be done?" required>
-            <button type="submit">Add Task</button>
+            <button type="submit">Submit</button>
         </form>
         <div class="controls">
             <button id="clear-all-btn">Clear All Tasks</button>
