--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <ul id="todo-list"></ul>
     </div>
     <footer>
-        DocuMatic <span id="version-tag"></span>
+        © 2025 DocuMatic <span id="version-tag"></span>
     </footer>
     <script src="app.js"></script>
 </body>
