--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>My Awesome To-Do App</h1>
+        <h1>DocuMatic Task Manager</h1>
         <form id="todo-form">
             <input type="text" id="todo-input" placeholder="What needs to be done?" required>
             <button type="submit">Submit</button>
