fix: update todo input placeholder text

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>DocuMatic Task Manager</h1>
         <form id="todo-form">
-            <input type="text" id="todo-input" placeholder="What needs to be done?" required>
+            <input type="text" id="todo-input" placeholder="Add your next task..." required>
             <button type="submit">Submit</button>
         </form>
         <div class="controls">
